tests/outref/TC072.ref

-- TC072 : OCTO519 : Test x.y column name syntax
CREATE TABLE `X.Y` (`ID` INTEGER CONSTRAINT X.Y_PKEY PRIMARY KEY) GLOBAL "^xy(keys(""id""))" DELIM "|" READWRITE;
SELECT * FROM x.y;
\d x.y;

DROP TABLE IF EXISTS X.Y;
CREATE TABLE X.Y (id INTEGER CONSTRAINT XY_PKEY PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30)) GLOBAL "^names";
SELECT * FROM x.y;
\d x.y;

INSERT INTO x.y VALUES (12, 'First12', 'Last12'), (13, 'First13', 'Last13');
SELECT * FROM x.y;
SELECT * FROM x.y x1, x.y x2 where X1.id = 2;
DELETE FROM x.y where lastname = 'Cool';
UPDATE x.y SET id = 7, firstname = 'Sunny' WHERE lastname = 'Cool';
TRUNCATE x.y;

select x.y.z from octoonerowtable as n1(x.y.z); -- Error: x.y.z format not accepted for aliases
select x.y from octoonerowtable as n1(x.y); -- Error: x.y format not accepted for aliases
select x from octoonerowtable as n1(x);

create table a.b.c (id integer);
\d a.b.c;

truncate x.y.z; -- Error: x.y.z format not accepted for TRUNCATE
create table x (id integer constraint x.y.z primary key);  -- Error: x.y.z format not accepted for CONSTRAINTs
create table x (id integer constraint x.y primary key);  -- Error: x.y format not accepted for CONSTRAINTs

insert into tmp (tmp.id) values (1); -- Error: x.y format not accepted for aliases
update tmp set tmp.id = 1; -- Error: x.y format not accepted in UPDATE columns
OCTO> CREATE TABLE `X.Y` (`ID` INTEGER CONSTRAINT X.Y_PKEY PRIMARY KEY) GLOBAL "^xy(keys(""id""))" DELIM "|" READWRITE;
CREATE TABLE
OCTO> SELECT * FROM x.y;
id
(0 rows)
OCTO> \d x.y;
Table "x.y" stored in Global: ^xy(id) : Type = READWRITE
Column|Type|Collation|Nullable|Default
id|INTEGER||NOT NULL|
Indexes:
    "x.y_pkey" PRIMARY KEY CONSTRAINT, Column(s) (id), Global: ^xy(id)
OCTO> DROP TABLE IF EXISTS X.Y;
DROP TABLE
OCTO> CREATE TABLE X.Y (id INTEGER CONSTRAINT XY_PKEY PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30)) GLOBAL "^names";
CREATE TABLE
OCTO> SELECT * FROM x.y;
id|firstname|lastname
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
(6 rows)
OCTO> \d x.y;
Table "x.y" stored in Global: ^names(id) : Type = READWRITE
Column|Type|Collation|Nullable|Default
id|INTEGER||NOT NULL|
firstname|VARCHAR(30)|||
lastname|VARCHAR(30)|||
Indexes:
    "xy_pkey" PRIMARY KEY CONSTRAINT, Column(s) (id), Global: ^names(id)
OCTO> INSERT INTO x.y VALUES (12, 'First12', 'Last12'), (13, 'First13', 'Last13');
INSERT 0 2
OCTO> SELECT * FROM x.y;
id|firstname|lastname
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
12|First12|Last12
13|First13|Last13
(8 rows)
OCTO> SELECT * FROM x.y x1, x.y x2 where X1.id = 2;
id|firstname|lastname|id|firstname|lastname
2|Cereal|Killer|0|Zero|Cool
2|Cereal|Killer|1|Acid|Burn
2|Cereal|Killer|2|Cereal|Killer
2|Cereal|Killer|3|Lord|Nikon
2|Cereal|Killer|4|Joey|
2|Cereal|Killer|5|Zero|Cool
2|Cereal|Killer|12|First12|Last12
2|Cereal|Killer|13|First13|Last13
(8 rows)
OCTO> DELETE FROM x.y where lastname = 'Cool';
DELETE 2
OCTO> UPDATE x.y SET id = 7, firstname = 'Sunny' WHERE lastname = 'Cool';
UPDATE 0
OCTO> TRUNCATE x.y;
TRUNCATE TABLE
LINE 18:1: ....z from octoonerowtable as n1(x.y.z); -- Error: x.y.z format no...
                                             ^
syntax error, unexpected PERIOD, expecting RIGHT_PAREN
OCTO> select x.y.z from octoonerowtable as n1(x.y.z);
LINE 19:2: ....y from octoonerowtable as n1(x.y); -- Error: x.y format not ac...
                                             ^
syntax error, unexpected PERIOD, expecting RIGHT_PAREN
OCTO> -- Error: x.y.z format not accepted for aliases
select x.y from octoonerowtable as n1(x.y);
OCTO> -- Error: x.y format not accepted for aliases
select x from octoonerowtable as n1(x);
x
1
(1 row)
LINE 22:1: create table a.b.c (id integer);
                           ^
syntax error, unexpected PERIOD, expecting LEFT_PAREN
OCTO> create table a.b.c (id integer);
OCTO> \d a.b.
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: a.b
LINE 23:1: c;
           ^
syntax error, unexpected IDENTIFIER_ALONE
OCTO> c;
LINE 25:1: truncate x.y.z; -- Error: x.y.z format not accepted for TRUNCATE
                       ^
syntax error, unexpected PERIOD, expecting SEMICOLON or ENDOFFILE
OCTO> truncate x.y.z;
LINE 26:2: ...le x (id integer constraint x.y.z primary key);  -- Error: x.y....
                                             ^
syntax error, unexpected PERIOD
OCTO> -- Error: x.y.z format not accepted for TRUNCATE
create table x (id integer constraint x.y.z primary key);
OCTO> -- Error: x.y.z format not accepted for CONSTRAINTs
create table x (id integer constraint x.y primary key);
CREATE TABLE
LINE 29:3: insert into tmp (tmp.id) values (1); -- Error: x.y format not a...
                               ^
syntax error, unexpected PERIOD, expecting RIGHT_PAREN
OCTO> -- Error: x.y format not accepted for CONSTRAINTs

insert into tmp (tmp.id) values (1);
LINE 30:2: update tmp set tmp.id = 1; -- Error: x.y format not accepted in...
                             ^
syntax error, unexpected PERIOD, expecting EQUALS
OCTO> -- Error: x.y format not accepted for aliases
update tmp set tmp.id = 1;
OCTO> -- Error: x.y format not accepted in UPDATE columns
